--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "include-all": "~0.1.3",
     "lodash": "^3.9.3",
+    "passport": "^0.3.2",
+    "passport-github-token": "^2.1.0",
     "pluralize": "^1.1.2",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
@@ -16,9 +18,20 @@
     "sails-hook-autoreload": "^0.11.5",
     "sails-hook-dev": "balderdashy/sails-hook-dev"
   },
+  "devDependencies": {
+    "esdoc": "0.4.3",
+    "chai": "3.4.1",
+    "istanbul": "0.4.2",
+    "mocha": "2.3.4",
+    "sails-memory": "0.10.5",
+    "sinon": "1.17.2"
+  },
   "scripts": {
+    "clean": "rm -rf ./.tmp",
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "docs": "esdoc -c esdoc.json",
+    "start": "node app.js",
+    "test": "istanbul cover _mocha"
   },
   "main": "app.js",
   "author": "",
