--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
     "ember-ajax": "0.6.2",
+    "ember-chimp": "0.1.0",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.3",
@@ -33,6 +34,7 @@
     "ember-cli-qunit": "^1.0.1",
     "ember-cli-release": "0.2.3",
     "ember-cli-seeds-scaffold": "^1.0.9",
+    "ember-cli-segment": "0.1.1",
     "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "2.0.0",
