--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,6 @@
     "ember-export-application-global": "^1.0.4",
     "ember-moment": "3.6.4",
     "ember-resolver": "^2.0.2",
-    "semantic-ui-ember": "^0.9.3"
+    "semantic-ui-ember": "0.9.3"
   }
 }
