--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,10 @@
     "sails-hook-autoreload": "^0.11.5",
     "sails-hook-dev": "balderdashy/sails-hook-dev",
     "sails-service-cipher": "^3.2.1",
-    "sails-service-hash": "^3.2.1"
+    "sails-service-hash": "^3.2.1",
+    "sails-service-image": "^3.1.1",
+    "sails-service-location": "^3.3.1",
+    "sails-service-mailer": "^3.2.1"
   },
   "devDependencies": {
     "esdoc": "0.4.3",
